# aws-windows-provisioner

./: .gitignore  GET_CREDENTIALS.md  README.md  USAGE.md  pyproject.toml
src/winaws/: __init__.py  cli.py
src/winaws/commands/: create.py  list.py  password.py  start.py  status.py  stop.py  terminate.py
src/winaws/core/: cloudformation.py  ec2.py  keypair.py  password.py
src/winaws/prompts/: interactive.py
src/winaws/templates/: vpc_windows.yaml
src/winaws/utils/: aws.py  console.py
