[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winaws"
version = "0.1.0"
description = "AWS Windows Provisioner CLI - Quickly create and manage Windows instances on AWS"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "WinAWS Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer[all]>=0.12.0",
    "boto3>=1.34.0",
    "questionary>=2.0.0",
    "rich>=13.7.0",
    "cryptography>=42.0.0",
    "pydantic>=2.6.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
winaws = "winaws.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
winaws = ["templates/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
